Update - 'devImg' set allways visible (pb not solved yet)

--- a/styles/portfolio5.scss
+++ b/styles/portfolio5.scss
@@ -281,6 +281,10 @@ header {
     grid-template-rows: repeat(3, max-content);
     justify-self: center;
     grid-template-areas: "bloc1" "bloc3" "devImg";
+
+    @media screen and (min-width: $pt-ecran) {
+        grid-template-areas: "devImg" "bloc1" "bloc3";
+    }
 }
 .zoneBloc1 {
     grid-area: bloc1;
@@ -324,17 +328,17 @@ header {
 }
 .devImg {
     display: block;
-    width: 60%;
+    width: 50%;
     height: auto;
     margin: 5vw auto;
     filter: drop-shadow(0px 0px 70px $c-grad3);
     border-radius: 10%;
 
-    @media screen and (min-width: $pt-ecran) and (max-width: $mo-ecran) {
-        width: 70%;
+    @media screen and (min-width: $pt-ecran) and (max-width: $gd-ecran) {
+        width: 60%;
     }
-    @media screen and (min-width: $mo-ecran) {
-        width: 75%;
+    @media screen and (min-width: $gd-ecran) {
+        width: 55%;
     }
 }
 
